PythonLexer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AS
    WHITESPACE

Grammar

Rule 0     S' -> file
Rule 1     file -> statements ENDMARKER
Rule 2     file -> ENDMARKER
Rule 3     statements -> statements statement
Rule 4     statements -> statements NEWLINE
Rule 5     statements -> statement
Rule 6     statement -> compound_stmt
Rule 7     statement -> simple_stmts
Rule 8     simple_stmts -> simple_stmts SEMICOLON simple_stmt NEWLINE
Rule 9     simple_stmts -> simple_stmt NEWLINE
Rule 10    simple_stmts -> simple_stmt
Rule 11    simple_stmt -> assignment
Rule 12    simple_stmt -> expressions
Rule 13    simple_stmt -> return_stmt
Rule 14    simple_stmt -> PASS
Rule 15    simple_stmt -> del_stmt
Rule 16    simple_stmt -> BREAK
Rule 17    simple_stmt -> CONTINUE
Rule 18    simple_stmt -> global_stmt
Rule 19    compound_stmt -> function_def
Rule 20    compound_stmt -> if_stmt
Rule 21    compound_stmt -> class_def
Rule 22    compound_stmt -> for_stmt
Rule 23    compound_stmt -> while_stmt
Rule 24    assignment -> targets augmentation_assignment expressions
Rule 25    assignment -> targets ASSIGNMENT assignment
Rule 26    assignment -> targets ASSIGNMENT expressions
Rule 27    augmentation_assignment -> ADDITION_ASSIGNMENT
Rule 28    augmentation_assignment -> SUBTRACTION_ASSIGNMENT
Rule 29    augmentation_assignment -> MULTIPLICATION_ASSIGNMENT
Rule 30    augmentation_assignment -> DIVISION_ASSIGNMENT
Rule 31    augmentation_assignment -> MODULO_ASSIGNMENT
Rule 32    augmentation_assignment -> EXPONENTIATION_ASSIGNMENT
Rule 33    augmentation_assignment -> FLOOR_DIVISION_ASSIGNMENT
Rule 34    return_stmt -> RETURN expressions
Rule 35    global_stmt -> GLOBAL namelist
Rule 36    del_stmt -> DEL namelist
Rule 37    namelist -> namelist COMMA IDENTIFIER
Rule 38    namelist -> IDENTIFIER
Rule 39    block -> NEWLINE INDENT statements DEDENT
Rule 40    block -> simple_stmts
Rule 41    class_def -> CLASS IDENTIFIER L_PARENTHESIS arguments R_PARENTHESIS COLON block
Rule 42    class_def -> CLASS IDENTIFIER L_PARENTHESIS R_PARENTHESIS COLON block
Rule 43    class_def -> CLASS IDENTIFIER COLON block
Rule 44    function_def -> DEF IDENTIFIER L_PARENTHESIS parameters R_PARENTHESIS COLON block
Rule 45    function_def -> DEF IDENTIFIER L_PARENTHESIS R_PARENTHESIS COLON block
Rule 46    parameters -> parameters COMMA IDENTIFIER
Rule 47    parameters -> IDENTIFIER
Rule 48    if_stmt -> IF expression COLON block elif_stmt
Rule 49    if_stmt -> IF expression COLON block else_block
Rule 50    if_stmt -> IF expression COLON block
Rule 51    elif_stmt -> ELIF expression COLON block elif_stmt
Rule 52    elif_stmt -> ELIF expression COLON block else_block
Rule 53    elif_stmt -> ELIF expression COLON block
Rule 54    else_block -> ELSE COLON block
Rule 55    while_stmt -> WHILE expression COLON block else_block
Rule 56    while_stmt -> WHILE expression COLON block
Rule 57    for_stmt -> FOR targets IN expressions COLON else_block
Rule 58    for_stmt -> FOR targets IN expressions COLON block
Rule 59    expressions -> expressions COMMA expression
Rule 60    expressions -> expression
Rule 61    expression -> disjunction IF disjunction ELSE expression
Rule 62    expression -> disjunction
Rule 63    disjunction -> conjunction OR disjunction
Rule 64    disjunction -> conjunction
Rule 65    conjunction -> inversion AND inversion
Rule 66    conjunction -> inversion
Rule 67    inversion -> NOT inversion
Rule 68    inversion -> comparison
Rule 69    comparison -> bitwise_or compare_op_list
Rule 70    comparison -> bitwise_or
Rule 71    compare_op_list -> compare_op_list compare_op
Rule 72    compare_op_list -> compare_op
Rule 73    compare_op -> EQUALITY bitwise_or
Rule 74    compare_op -> INEQUALITY bitwise_or
Rule 75    compare_op -> GREATER_EQUAL bitwise_or
Rule 76    compare_op -> LESSER_EQUAL bitwise_or
Rule 77    compare_op -> GREATER bitwise_or
Rule 78    compare_op -> LESSER bitwise_or
Rule 79    compare_op -> NOT IN bitwise_or
Rule 80    compare_op -> IS NOT bitwise_or
Rule 81    compare_op -> IN bitwise_or
Rule 82    compare_op -> IS bitwise_or
Rule 83    bitwise_or -> bitwise_or PIPE bitwise_xor
Rule 84    bitwise_or -> bitwise_xor
Rule 85    bitwise_xor -> bitwise_xor CARET bitwise_and
Rule 86    bitwise_xor -> bitwise_and
Rule 87    bitwise_and -> bitwise_and AMPERSAND shift_expr
Rule 88    bitwise_and -> shift_expr
Rule 89    shift_expr -> shift_expr L_SHIFT sum
Rule 90    shift_expr -> shift_expr R_SHIFT sum
Rule 91    shift_expr -> sum
Rule 92    sum -> sum PLUS term
Rule 93    sum -> sum MINUS term
Rule 94    sum -> term
Rule 95    term -> term STAR factor
Rule 96    term -> term SLASH factor
Rule 97    term -> term DOUBLE_SLASH factor
Rule 98    term -> term PERCENT factor
Rule 99    term -> factor
Rule 100   factor -> PLUS factor
Rule 101   factor -> MINUS factor
Rule 102   factor -> power
Rule 103   power -> primary DOUBLE_STAR factor
Rule 104   power -> primary
Rule 105   primary -> primary L_PARENTHESIS arguments R_PARENTHESIS
Rule 106   primary -> L_PARENTHESIS expression R_PARENTHESIS
Rule 107   primary -> primary L_PARENTHESIS R_PARENTHESIS
Rule 108   primary -> primary L_SQB slices R_SQB
Rule 109   primary -> primary DOT IDENTIFIER
Rule 110   primary -> atomic
Rule 111   slices -> slices COMMA slice
Rule 112   slices -> slice
Rule 113   slice -> expression COLON expression COLON expression
Rule 114   slice -> expression COLON expression
Rule 115   slice -> expression COLON
Rule 116   slice -> COLON expression
Rule 117   slice -> COLON COLON
Rule 118   slice -> COLON
Rule 119   slice -> expression
Rule 120   atomic -> IDENTIFIER
Rule 121   atomic -> TRUE
Rule 122   atomic -> FALSE
Rule 123   atomic -> NONE
Rule 124   atomic -> strings
Rule 125   atomic -> number
Rule 126   atomic -> tuple
Rule 127   atomic -> list
Rule 128   atomic -> dict
Rule 129   atomic -> set
Rule 130   number -> NUMBER
Rule 131   number -> F_NUMBER
Rule 132   number -> BIN_NUMBER
Rule 133   number -> HEX_NUMBER
Rule 134   number -> OCT_NUMBER
Rule 135   arguments -> expressions
Rule 136   strings -> STRING
Rule 137   strings -> TRIPLE_STRING
Rule 138   list -> L_SQB expressions R_SQB
Rule 139   list -> L_SQB R_SQB
Rule 140   tuple -> L_PARENTHESIS expression COMMA expressions R_PARENTHESIS
Rule 141   tuple -> L_PARENTHESIS expression COMMA R_PARENTHESIS
Rule 142   tuple -> L_PARENTHESIS R_PARENTHESIS
Rule 143   set -> L_CB expressions R_CB
Rule 144   dict -> L_CB kvpairs R_CB
Rule 145   dict -> L_CB R_CB
Rule 146   kvpairs -> kvpair COMMA kvpairs
Rule 147   kvpairs -> kvpair COMMA
Rule 148   kvpairs -> kvpair
Rule 149   kvpair -> expression COLON expression
Rule 150   targets -> primary
Rule 151   target -> target_primary DOT IDENTIFIER
Rule 152   target -> target_primary L_SQB slices R_SQB
Rule 153   target -> target_atomic
Rule 154   target_primary -> target_primary DOT IDENTIFIER
Rule 155   target_primary -> target_primary L_SQB slices R_SQB
Rule 156   target_primary -> target_primary L_PARENTHESIS R_PARENTHESIS
Rule 157   target_primary -> target_primary L_PARENTHESIS arguments R_PARENTHESIS
Rule 158   target_primary -> target_atomic
Rule 159   target_atomic -> IDENTIFIER
Rule 160   target_atomic -> L_SQB target_primary R_SQB
Rule 161   target_atomic -> L_PARENTHESIS targets R_PARENTHESIS
Rule 162   empty -> <empty>

Terminals, with rules where they appear

ADDITION_ASSIGNMENT  : 27
AMPERSAND            : 87
AND                  : 65
AS                   : 
ASSIGNMENT           : 25 26
BIN_NUMBER           : 132
BREAK                : 16
CARET                : 85
CLASS                : 41 42 43
COLON                : 41 42 43 44 45 48 49 50 51 52 53 54 55 56 57 58 113 113 114 115 116 117 117 118 149
COMMA                : 37 46 59 111 140 141 146 147
CONTINUE             : 17
DEDENT               : 39
DEF                  : 44 45
DEL                  : 36
DIVISION_ASSIGNMENT  : 30
DOT                  : 109 151 154
DOUBLE_SLASH         : 97
DOUBLE_STAR          : 103
ELIF                 : 51 52 53
ELSE                 : 54 61
ENDMARKER            : 1 2
EQUALITY             : 73
EXPONENTIATION_ASSIGNMENT : 32
FALSE                : 122
FLOOR_DIVISION_ASSIGNMENT : 33
FOR                  : 57 58
F_NUMBER             : 131
GLOBAL               : 35
GREATER              : 77
GREATER_EQUAL        : 75
HEX_NUMBER           : 133
IDENTIFIER           : 37 38 41 42 43 44 45 46 47 109 120 151 154 159
IF                   : 48 49 50 61
IN                   : 57 58 79 81
INDENT               : 39
INEQUALITY           : 74
IS                   : 80 82
LESSER               : 78
LESSER_EQUAL         : 76
L_CB                 : 143 144 145
L_PARENTHESIS        : 41 42 44 45 105 106 107 140 141 142 156 157 161
L_SHIFT              : 89
L_SQB                : 108 138 139 152 155 160
MINUS                : 93 101
MODULO_ASSIGNMENT    : 31
MULTIPLICATION_ASSIGNMENT : 29
NEWLINE              : 4 8 9 39
NONE                 : 123
NOT                  : 67 79 80
NUMBER               : 130
OCT_NUMBER           : 134
OR                   : 63
PASS                 : 14
PERCENT              : 98
PIPE                 : 83
PLUS                 : 92 100
RETURN               : 34
R_CB                 : 143 144 145
R_PARENTHESIS        : 41 42 44 45 105 106 107 140 141 142 156 157 161
R_SHIFT              : 90
R_SQB                : 108 138 139 152 155 160
SEMICOLON            : 8
SLASH                : 96
STAR                 : 95
STRING               : 136
SUBTRACTION_ASSIGNMENT : 28
TRIPLE_STRING        : 137
TRUE                 : 121
WHILE                : 55 56
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

arguments            : 41 105 157
assignment           : 11 25
atomic               : 110
augmentation_assignment : 24
bitwise_and          : 85 86 87
bitwise_or           : 69 70 73 74 75 76 77 78 79 80 81 82 83
bitwise_xor          : 83 84 85
block                : 41 42 43 44 45 48 49 50 51 52 53 54 55 56 58
class_def            : 21
compare_op           : 71 72
compare_op_list      : 69 71
comparison           : 68
compound_stmt        : 6
conjunction          : 63 64
del_stmt             : 15
dict                 : 128
disjunction          : 61 61 62 63
elif_stmt            : 48 51
else_block           : 49 52 55 57
empty                : 
expression           : 48 49 50 51 52 53 55 56 59 60 61 106 113 113 113 114 114 115 116 119 140 141 149 149
expressions          : 12 24 26 34 57 58 59 135 138 140 143
factor               : 95 96 97 98 99 100 101 103
file                 : 0
for_stmt             : 22
function_def         : 19
global_stmt          : 18
if_stmt              : 20
inversion            : 65 65 66 67
kvpair               : 146 147 148
kvpairs              : 144 146
list                 : 127
namelist             : 35 36 37
number               : 125
parameters           : 44 46
power                : 102
primary              : 103 104 105 107 108 109 150
return_stmt          : 13
set                  : 129
shift_expr           : 87 88 89 90
simple_stmt          : 8 9 10
simple_stmts         : 7 8 40
slice                : 111 112
slices               : 108 111 152 155
statement            : 3 5
statements           : 1 3 4 39
strings              : 124
sum                  : 89 90 91 92 93
target               : 
target_atomic        : 153 158
target_primary       : 151 152 154 155 156 157 160
targets              : 24 25 26 57 58 161
term                 : 92 93 94 95 96 97 98
tuple                : 126
while_stmt           : 23

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . statements ENDMARKER
    (2) file -> . ENDMARKER
    (3) statements -> . statements statement
    (4) statements -> . statements NEWLINE
    (5) statements -> . statement
    (6) statement -> . compound_stmt
    (7) statement -> . simple_stmts
    (19) compound_stmt -> . function_def
    (20) compound_stmt -> . if_stmt
    (21) compound_stmt -> . class_def
    (22) compound_stmt -> . for_stmt
    (23) compound_stmt -> . while_stmt
    (8) simple_stmts -> . simple_stmts SEMICOLON simple_stmt NEWLINE
    (9) simple_stmts -> . simple_stmt NEWLINE
    (10) simple_stmts -> . simple_stmt
    (44) function_def -> . DEF IDENTIFIER L_PARENTHESIS parameters R_PARENTHESIS COLON block
    (45) function_def -> . DEF IDENTIFIER L_PARENTHESIS R_PARENTHESIS COLON block
    (48) if_stmt -> . IF expression COLON block elif_stmt
    (49) if_stmt -> . IF expression COLON block else_block
    (50) if_stmt -> . IF expression COLON block
    (41) class_def -> . CLASS IDENTIFIER L_PARENTHESIS arguments R_PARENTHESIS COLON block
    (42) class_def -> . CLASS IDENTIFIER L_PARENTHESIS R_PARENTHESIS COLON block
    (43) class_def -> . CLASS IDENTIFIER COLON block
    (57) for_stmt -> . FOR targets IN expressions COLON else_block
    (58) for_stmt -> . FOR targets IN expressions COLON block
    (55) while_stmt -> . WHILE expression COLON block else_block
    (56) while_stmt -> . WHILE expression COLON block
    (11) simple_stmt -> . assignment
    (12) simple_stmt -> . expressions
    (13) simple_stmt -> . return_stmt
    (14) simple_stmt -> . PASS
    (15) simple_stmt -> . del_stmt
    (16) simple_stmt -> . BREAK
    (17) simple_stmt -> . CONTINUE
    (18) simple_stmt -> . global_stmt
    (24) assignment -> . targets augmentation_assignment expressions
    (25) assignment -> . targets ASSIGNMENT assignment
    (26) assignment -> . targets ASSIGNMENT expressions
    (59) expressions -> . expressions COMMA expression
    (60) expressions -> . expression
    (34) return_stmt -> . RETURN expressions
    (36) del_stmt -> . DEL namelist
    (35) global_stmt -> . GLOBAL namelist
    (150) targets -> . primary
    (61) expression -> . disjunction IF disjunction ELSE expression
    (62) expression -> . disjunction
    (105) primary -> . primary L_PARENTHESIS arguments R_PARENTHESIS
    (106) primary -> . L_PARENTHESIS expression R_PARENTHESIS
    (107) primary -> . primary L_PARENTHESIS R_PARENTHESIS
    (108) primary -> . primary L_SQB slices R_SQB
    (109) primary -> . primary DOT IDENTIFIER
    (110) primary -> . atomic
    (63) disjunction -> . conjunction OR disjunction
    (64) disjunction -> . conjunction
    (120) atomic -> . IDENTIFIER
    (121) atomic -> . TRUE
    (122) atomic -> . FALSE
    (123) atomic -> . NONE
    (124) atomic -> . strings
    (125) atomic -> . number
    (126) atomic -> . tuple
    (127) atomic -> . list
    (128) atomic -> . dict
    (129) atomic -> . set
    (65) conjunction -> . inversion AND inversion
    (66) conjunction -> . inversion
    (136) strings -> . STRING
    (137) strings -> . TRIPLE_STRING
    (130) number -> . NUMBER
    (131) number -> . F_NUMBER
    (132) number -> . BIN_NUMBER
    (133) number -> . HEX_NUMBER
    (134) number -> . OCT_NUMBER
    (140) tuple -> . L_PARENTHESIS expression COMMA expressions R_PARENTHESIS
    (141) tuple -> . L_PARENTHESIS expression COMMA R_PARENTHESIS
    (142) tuple -> . L_PARENTHESIS R_PARENTHESIS
    (138) list -> . L_SQB expressions R_SQB
    (139) list -> . L_SQB R_SQB
    (144) dict -> . L_CB kvpairs R_CB
    (145) dict -> . L_CB R_CB
    (143) set -> . L_CB expressions R_CB
    (67) inversion -> . NOT inversion
    (68) inversion -> . comparison
    (69) comparison -> . bitwise_or compare_op_list
    (70) comparison -> . bitwise_or
    (83) bitwise_or -> . bitwise_or PIPE bitwise_xor
    (84) bitwise_or -> . bitwise_xor
    (85) bitwise_xor -> . bitwise_xor CARET bitwise_and
    (86) bitwise_xor -> . bitwise_and
    (87) bitwise_and -> . bitwise_and AMPERSAND shift_expr
    (88) bitwise_and -> . shift_expr
    (89) shift_expr -> . shift_expr L_SHIFT sum
    (90) shift_expr -> . shift_expr R_SHIFT sum
    (91) shift_expr -> . sum
    (92) sum -> . sum PLUS term
    (93) sum -> . sum MINUS term
    (94) sum -> . term
    (95) term -> . term STAR factor
    (96) term -> . term SLASH factor
    (97) term -> . term DOUBLE_SLASH factor
    (98) term -> . term PERCENT factor
    (99) term -> . factor
    (100) factor -> . PLUS factor
    (101) factor -> . MINUS factor
    (102) factor -> . power
    (103) power -> . primary DOUBLE_STAR factor
    (104) power -> . primary

    ENDMARKER       shift and go to state 3
    DEF             shift and go to state 13
    IF              shift and go to state 16
    CLASS           shift and go to state 18
    FOR             shift and go to state 19
    WHILE           shift and go to state 22
    PASS            shift and go to state 25
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    RETURN          shift and go to state 30
    DEL             shift and go to state 31
    GLOBAL          shift and go to state 32
    L_PARENTHESIS   shift and go to state 15
    IDENTIFIER      shift and go to state 14
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    NONE            shift and go to state 40
    STRING          shift and go to state 48
    TRIPLE_STRING   shift and go to state 49
    NUMBER          shift and go to state 50
    F_NUMBER        shift and go to state 51
    BIN_NUMBER      shift and go to state 52
    HEX_NUMBER      shift and go to state 53
    OCT_NUMBER      shift and go to state 54
    L_SQB           shift and go to state 35
    L_CB            shift and go to state 55
    NOT             shift and go to state 56
    PLUS            shift and go to state 63
    MINUS           shift and go to state 65

    file                           shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 4
    compound_stmt                  shift and go to state 5
    simple_stmts                   shift and go to state 6
    function_def                   shift and go to state 7
    if_stmt                        shift and go to state 8
    class_def                      shift and go to state 9
    for_stmt                       shift and go to state 10
    while_stmt                     shift and go to state 11
    simple_stmt                    shift and go to state 12
    expression                     shift and go to state 17
    targets                        shift and go to state 20
    expressions                    shift and go to state 21
    assignment                     shift and go to state 23
    return_stmt                    shift and go to state 24
    del_stmt                       shift and go to state 26
    global_stmt                    shift and go to state 29
    primary                        shift and go to state 33
    disjunction                    shift and go to state 34
    atomic                         shift and go to state 36
    conjunction                    shift and go to state 37
    strings                        shift and go to state 41
    number                         shift and go to state 42
    tuple                          shift and go to state 43
    list                           shift and go to state 44
    dict                           shift and go to state 45
    set                            shift and go to state 46
    inversion                      shift and go to state 47
    comparison                     shift and go to state 57
    bitwise_or                     shift and go to state 58
    bitwise_xor                    shift and go to state 59
    bitwise_and                    shift and go to state 60
    shift_expr                     shift and go to state 61
    sum                            shift and go to state 62
    term                           shift and go to state 64
    factor                         shift and go to state 66
    power                          shift and go to state 67

state 1

    (0) S' -> file .



state 2

    (1) file -> statements . ENDMARKER
    (3) statements -> statements . statement
    (4) statements -> statements . NEWLINE
    (6) statement -> . compound_stmt
    (7) statement -> . simple_stmts
    (19) compound_stmt -> . function_def
    (20) compound_stmt -> . if_stmt
    (21) compound_stmt -> . class_def
    (22) compound_stmt -> . for_stmt
    (23) compound_stmt -> . while_stmt
    (8) simple_stmts -> . simple_stmts SEMICOLON simple_stmt NEWLINE
    (9) simple_stmts -> . simple_stmt NEWLINE
    (10) simple_stmts -> . simple_stmt
    (44) function_def -> . DEF IDENTIFIER L_PARENTHESIS parameters R_PARENTHESIS COLON block
    (45) function_def -> . DEF IDENTIFIER L_PARENTHESIS R_PARENTHESIS COLON block
    (48) if_stmt -> . IF expression COLON block elif_stmt
    (49) if_stmt -> . IF expression COLON block else_block
    (50) if_stmt -> . IF expression COLON block
    (41) class_def -> . CLASS IDENTIFIER L_PARENTHESIS arguments R_PARENTHESIS COLON block
    (42) class_def -> . CLASS IDENTIFIER L_PARENTHESIS R_PARENTHESIS COLON block
    (43) class_def -> . CLASS IDENTIFIER COLON block
    (57) for_stmt -> . FOR targets IN expressions COLON else_block
    (58) for_stmt -> . FOR targets IN expressions COLON block
    (55) while_stmt -> . WHILE expression COLON block else_block
    (56) while_stmt -> . WHILE expression COLON block
    (11) simple_stmt -> . assignment
    (12) simple_stmt -> . expressions
    (13) simple_stmt -> . return_stmt
    (14) simple_stmt -> . PASS
    (15) simple_stmt -> . del_stmt
    (16) simple_stmt -> . BREAK
    (17) simple_stmt -> . CONTINUE
    (18) simple_stmt -> . global_stmt
    (24) assignment -> . targets augmentation_assignment expressions
    (25) assignment -> . targets ASSIGNMENT assignment
    (26) assignment -> . targets ASSIGNMENT expressions
    (59) expressions -> . expressions COMMA expression
    (60) expressions -> . expression
    (34) return_stmt -> . RETURN expressions
    (36) del_stmt -> . DEL namelist
    (35) global_stmt -> . GLOBAL namelist
    (150) targets -> . primary
    (61) expression -> . disjunction IF disjunction ELSE expression
    (62) expression -> . disjunction
    (105) primary -> . primary L_PARENTHESIS arguments R_PARENTHESIS
    (106) primary -> . L_PARENTHESIS expression R_PARENTHESIS
    (107) primary -> . primary L_PARENTHESIS R_PARENTHESIS
    (108) primary -> . primary L_SQB slices R_SQB
    (109) primary -> . primary DOT IDENTIFIER
    (110) primary -> . atomic
    (63) disjunction -> . conjunction OR disjunction
    (64) disjunction -> . conjunction
    (120) atomic -> . IDENTIFIER
    (121) atomic -> . TRUE
    (122) atomic -> . FALSE
    (123) atomic -> . NONE
    (124) atomic -> . strings
    (125) atomic -> . number
    (126) atomic -> . tuple
    (127) atomic -> . list
    (128) atomic -> . dict
    (129) atomic -> . set
    (65) conjunction -> . inversion AND inversion
    (66) conjunction -> . inversion
    (136) strings -> . STRING
    (137) strings -> . TRIPLE_STRING
    (130) number -> . NUMBER
    (131) number -> . F_NUMBER
    (132) number -> . BIN_NUMBER
    (133) number -> . HEX_NUMBER
    (134) number -> . OCT_NUMBER
    (140) tuple -> . L_PARENTHESIS expression COMMA expressions R_PARENTHESIS
    (141) tuple -> . L_PARENTHESIS expression COMMA R_PARENTHESIS
    (142) tuple -> . L_PARENTHESIS R_PARENTHESIS
    (138) list -> . L_SQB expressions R_SQB
    (139) list -> . L_SQB R_SQB
    (144) dict -> . L_CB kvpairs R_CB
    (145) dict -> . L_CB R_CB
    (143) set -> . L_CB expressions R_CB
    (67) inversion -> . NOT inversion
    (68) inversion -> . comparison
    (69) comparison -> . bitwise_or compare_op_list
    (70) comparison -> . bitwise_or
    (83) bitwise_or -> . bitwise_or PIPE bitwise_xor
    (84) bitwise_or -> . bitwise_xor
    (85) bitwise_xor -> . bitwise_xor CARET bitwise_and
    (86) bitwise_xor -> . bitwise_and
    (87) bitwise_and -> . bitwise_and AMPERSAND shift_expr
    (88) bitwise_and -> . shift_expr
    (89) shift_expr -> . shift_expr L_SHIFT sum
    (90) shift_expr -> . shift_expr R_SHIFT sum
    (91) shift_expr -> . sum
    (92) sum -> . sum PLUS term
    (93) sum -> . sum MINUS term
    (94) sum -> . term
    (95) term -> . term STAR factor
    (96) term -> . term SLASH factor
    (97) term -> . term DOUBLE_SLASH factor
    (98) term -> . term PERCENT factor
    (99) term -> . factor
    (100) factor -> . PLUS factor
    (101) factor -> . MINUS factor
    (102) factor -> . power
    (103) power -> . primary DOUBLE_STAR factor
    (104) power -> . primary

    ENDMARKER       shift and go to state 68
    NEWLINE         shift and go to state 70
    DEF             shift and go to state 13
    IF              shift and go to state 16
    CLASS           shift and go to state 18
    FOR             shift and go to state 19
    WHILE           shift and go to state 22
    PASS            shift and go to state 25
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    RETURN          shift and go to state 30
    DEL             shift and go to state 31
    GLOBAL          shift and go to state 32
    L_PARENTHESIS   shift and go to state 15
    IDENTIFIER      shift and go to state 14
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    NONE            shift and go to state 40
    STRING          shift and go to state 48
    TRIPLE_STRING   shift and go to state 49
    NUMBER          shift and go to state 50
    F_NUMBER        shift and go to state 51
    BIN_NUMBER      shift and go to state 52
    HEX_NUMBER      shift and go to state 53
    OCT_NUMBER      shift and go to state 54
    L_SQB           shift and go to state 35
    L_CB            shift and go to state 55
    NOT             shift and go to state 56
    PLUS            shift and go to state 63
    MINUS           shift and go to state 65

    statement                      shift and go to state 69
    compound_stmt                  shift and go to state 5
    simple_stmts                   shift and go to state 6
    function_def                   shift and go to state 7
    if_stmt                        shift and go to state 8
    class_def                      shift and go to state 9
    for_stmt                       shift and go to state 10
    while_stmt                     shift and go to state 11
    simple_stmt                    shift and go to state 12
    expression                     shift and go to state 17
    targets                        shift and go to state 20
    expressions                    shift and go to state 21
    assignment                     shift and go to state 23
    return_stmt                    shift and go to state 24
    del_stmt                       shift and go to state 26
    global_stmt                    shift and go to state 29
    primary                        shift and go to state 33
    disjunction                    shift and go to state 34
    atomic                         shift and go to state 36
    conjunction                    shift and go to state 37
    strings                        shift and go to state 41
    number                         shift and go to state 42
    tuple                          shift and go to state 43
    list                           shift and go to state 44
    dict                           shift and go to state 45
    set                            shift and go to state 46
    inversion                      shift and go to state 47
    comparison                     shift and go to state 57
    bitwise_or                     shift and go to state 58
    bitwise_xor                    shift and go to state 59
    bitwise_and                    shift and go to state 60
    shift_expr                     shift and go to state 61
    sum                            shift and go to state 62
    term                           shift and go to state 64
    factor                         shift and go to state 66
    power                          shift and go to state 67

state 3

    (2) file -> ENDMARKER .

    $end            reduce using rule 2 (file -> ENDMARKER .)


state 4

    (5) statements -> statement .

    ENDMARKER       reduce using rule 5 (statements -> statement .)
    NEWLINE         reduce using rule 5 (statements -> statement .)
    DEF             reduce using rule 5 (statements -> statement .)
    IF              reduce using rule 5 (statements -> statement .)
    CLASS           reduce using rule 5 (statements -> statement .)
    FOR             reduce using rule 5 (statements -> statement .)
    WHILE           reduce using rule 5 (statements -> statement .)
    PASS            reduce using rule 5 (statements -> statement .)
    BREAK           reduce using rule 5 (statements -> statement .)
    CONTINUE        reduce using rule 5 (statements -> statement .)
    RETURN          reduce using rule 5 (statements -> statement .)
    DEL             reduce using rule 5 (statements -> statement .)
    GLOBAL          reduce using rule 5 (statements -> statement .)
    L_PARENTHESIS   reduce using rule 5 (statements -> statement .)
    IDENTIFIER      reduce using rule 5 (statements -> statement .)
    TRUE            reduce using rule 5 (statements -> statement .)
    FALSE           reduce using rule 5 (statements -> statement .)
    NONE            reduce using rule 5 (statements -> statement .)
    STRING          reduce using rule 5 (statements -> statement .)
    TRIPLE_STRING   reduce using rule 5 (statements -> statement .)
    NUMBER          reduce using rule 5 (statements -> statement .)
    F_NUMBER        reduce using rule 5 (statements -> statement .)
    BIN_NUMBER      reduce using rule 5 (statements -> statement .)
    HEX_NUMBER      reduce using rule 5 (statements -> statement .)
    OCT_NUMBER      reduce using rule 5 (statements -> statement .)
    L_SQB           reduce using rule 5 (statements -> statement .)
    L_CB            reduce using rule 5 (statements -> statement .)
    NOT             reduce using rule 5 (statements -> statement .)
    PLUS            reduce using rule 5 (statements -> statement .)
    MINUS           reduce using rule 5 (statements -> statement .)
    DEDENT          reduce using rule 5 (statements -> statement .)


state 5

    (6) statement -> compound_stmt .

    ENDMARKER       reduce using rule 6 (statement -> compound_stmt .)
    NEWLINE         reduce using rule 6 (statement -> compound_stmt .)
    DEF             reduce using rule 6 (statement -> compound_stmt .)
    IF              reduce using rule 6 (statement -> compound_stmt .)
    CLASS           reduce using rule 6 (statement -> compound_stmt .)
    FOR             reduce using rule 6 (statement -> compound_stmt .)
    WHILE           reduce using rule 6 (statement -> compound_stmt .)
    PASS            reduce using rule 6 (statement -> compound_stmt .)
    BREAK           reduce using rule 6 (statement -> compound_stmt .)
    CONTINUE        reduce using rule 6 (statement -> compound_stmt .)
    RETURN          reduce using rule 6 (statement -> compound_stmt .)
    DEL             reduce using rule 6 (statement -> compound_stmt .)
    GLOBAL          reduce using rule 6 (statement -> compound_stmt .)
    L_PARENTHESIS   reduce using rule 6 (statement -> compound_stmt .)
    IDENTIFIER      reduce using rule 6 (statement -> compound_stmt .)
    TRUE            reduce using rule 6 (statement -> compound_stmt .)
    FALSE           reduce using rule 6 (statement -> compound_stmt .)
    NONE            reduce using rule 6 (statement -> compound_stmt .)
    STRING          reduce using rule 6 (statement -> compound_stmt .)
    TRIPLE_STRING   reduce using rule 6 (statement -> compound_stmt .)
    NUMBER          reduce using rule 6 (statement -> compound_stmt .)
    F_NUMBER        reduce using rule 6 (statement -> compound_stmt .)
    BIN_NUMBER      reduce using rule 6 (statement -> compound_stmt .)
    HEX_NUMBER      reduce using rule 6 (statement -> compound_stmt .)
    OCT_NUMBER      reduce using rule 6 (statement -> compound_stmt .)
    L_SQB           reduce using rule 6 (statement -> compound_stmt .)
    L_CB            reduce using rule 6 (statement -> compound_stmt .)
    NOT             reduce using rule 6 (statement -> compound_stmt .)
    PLUS            reduce using rule 6 (statement -> compound_stmt .)
    MINUS           reduce using rule 6 (statement -> compound_stmt .)
    DEDENT          reduce using rule 6 (statement -> compound_stmt .)


state 6

    (7) statement -> simple_stmts .
    (8) simple_stmts -> simple_stmts . SEMICOLON simple_stmt NEWLINE
